Fix register problem

--- a/src/fastertransformer/kernels/CMakeLists.txt
+++ b/src/fastertransformer/kernels/CMakeLists.txt
@@ -228,6 +228,8 @@ set_property(TARGET custom_ar_kernels PROPERTY CUDA_RESOLVE_DEVICE_SYMBOLS  ON)
 add_library(vit_kernels STATIC vit_kernels.cu)
 set_property(TARGET vit_kernels PROPERTY POSITION_INDEPENDENT_CODE  ON)
 set_property(TARGET vit_kernels PROPERTY CUDA_RESOLVE_DEVICE_SYMBOLS  ON)
+target_compile_options(custom_ar_kernels PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:-Xptxas>)
+target_compile_options(custom_ar_kernels PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:-v>)
 
 add_library(moe_kernels STATIC moe_kernels.cu)
 set_property(TARGET moe_kernels PROPERTY POSITION_INDEPENDENT_CODE ON)
